<resources>
    <string name="app_name">HutechDrugApp</string>
    <string name="term">Terms and Conditions</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="duplicate">Saved</string>
    <string name="menu_home">Home</string>
    <string name="menu_user">User</string>
    <string name="menu_drug">Drug</string>
    <string name="menu_store">Pharma</string>

    <string name="map_api_key">AIzaSyAzKmakGKZJzjmcaAlHlEX-hQGqvSOvbhQ</string>
    <string name="forgot_password">Forgot password?</string>


    <string name="drug_interacts">Tương tác</string>
    <string name="drugs">Thuốc</string>
    <string name="ho_t_ch_t">Hoạt chất</string>
    <string name="content_text">Tương tác thuốc là sự tác dụng qua lại lẫn nhau giữa thuốc này với thuốc khác, giữa thuốc với tình trạng sinh lý của cơ thể.</string>
    <string name="xinChao">Xin chào!!</string>
    <string name="chucngaymoi">Chúc bạn có một ngày vui vẻ</string>
    <string name="timkiemHome">Tìm kiếm thứ gì đó nào ❤</string>
    <string name="enter_your_email">Enter your email address</string>
    <string name="we_send_email">We will email you a link to \n reset your password.</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="profile">Profile</string>


    <string-array name="drugs">
        <item>"Angobin"</item>
        <item>"Bisoprolol Stada 10mg"</item>
        <item>"Parazacol 1000"</item>
        <item>"Ouabain 0,25mg"</item>
        <item>"Douzeumin 5000"</item>
        <item>"Paracetamol 500mg"</item>
        <item>"Vicometrin 480"</item>
        <item>"SaViBone"</item>
    </string-array>

    <string-array name="active">
        <item>"Tetracyclin 250 mg"</item>
        <item>"Berberin clorid 0,01g"</item>
        <item>"Parazacol 1000"</item>
        <item>"colchicin 1mg"</item>
        <item>"Clarithromycin 500 mg"</item>
        <item>"famciclovir 750 mg"</item>
        <item>"Loratadin 10mg"</item>
        <item>"hyaluronidase 1500IU"</item>
    </string-array>

</resources>